Update 21-07-2022 - HTML 2 RADIO E CHECKBOXEXERCICIO 1 - CHECKBOX RADIO.html

--- a/Atividades em sala/21-07-2022 - HTML 2 RADIO E CHECKBOXEXERCICIO 1 - CHECKBOX RADIO.html
+++ b/Atividades em sala/21-07-2022 - HTML 2 RADIO E CHECKBOXEXERCICIO 1 - CHECKBOX RADIO.html
@@ -81,6 +81,11 @@
         <br>
         <br>  
         <br>
+        <p>Autoriza envio de material publicitário?</p>
+        <input type="checkbox" name="autorizacao" value="true">
+        <br>
+        <br>
+        <br>
         <label for="enviarfaleconosco">Enviar</label>
         <br>
         <input type="submit" id="enviarfaleconosco" nome="enviarfaleconosco"/>    
